@@ -3,6 +3,12 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-05-27:
+
+- Fixed a bug introduced on 2022-03-05 where 'set --default', while turning
+  off the --posix option, did not re-enable the special handling of a repeated
+  $IFS whitespace character as non-whitespace.
+
 2022-05-25:
 
 - Fixed a bug introduced on 2021-02-20 that caused incorrect output for
